# chorewheel

./: .envrc  .gitignore  cabal.project.freeze  cabal.project.freeze.bu  chorewheel.cabal  default.nix  docker-compose.yml  flake.nix  fourmolu.yaml  package.yaml  reload.sh  restart_ghci  watch.sh
app/: Main.hs
migration/: .sqlfluff  init.sql
nix/: sources.json
src/: API.hs  ApiUtil.hs  App.hs  Auth.hs  Chore.hs  ChoreWheel.hs  DB.hs  Fam.hs  Log.hs  Models.hs  Participants.hs  Schedule.hs  ServantLucid.hs  Test.hs
src/API/: Auth.hs  Root.hs  User.hs  Util.hs
src/API/Frontend/: Home.hs  Login.hs
src/Core/: Chore.hs
src/DB/: Chore.hs  Household.hs  Password.hs  RefreshToken.hs  Schedule.hs  Session.hs  SessionException.hs  User.hs  Util.hs
src/Effect/: Auth.hs  Chore.hs  Household.hs  Identifier.hs  JWT.hs  Time.hs  User.hs
src/Effect/Auth/: Jwt.hs  Password.hs  Session.hs
src/Page/: Attribute.hs  Chore.hs  Common.hs  Home.hs  Households.hs  Landing.hs  Login.hs
src/Routes/: Root.hs  SessionAuth.hs
src/Schedule/: Pattern.hs  Primitives.hs  Schedule.hs
src/Server/: Root.hs  SessionAuth.hs
test/: Spec.hs
